--- a/style.css
+++ b/style.css
@@ -1,5 +1,17 @@
 body {
 	margin: 0;
 	display: flex;
-	justify-content: center
+	justify-content: center;
+	height: 100vh;
+	align-items: center;
+	background-color: crimson;
+}
+
+.container {
+	background-color: rgba(0, 213, 255, 0.745);
+	width: 400px;
+	padding: 20px;
+	margin: 5px;
+	border-radius: 10px;
+	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
 }
