--- a/style.css
+++ b/style.css
@@ -15,3 +15,33 @@ body {
 	border-radius: 10px;
 	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
 }
+
+.textArea {
+	resize: none;
+	width: 100%;
+	height: 100px;
+	font-size: 18px;
+	font-family: sans-serif;
+	padding: 10px;
+	box-sizing: border-box;
+	border: solid 2px darkgray;
+}
+
+.counterContainer {
+	display: flex;
+	justify-content: space-between;
+	padding: 0 5px;
+}
+
+.counterContainer p {
+	font-size: 18px;
+	color: gray;
+}
+
+.totalCounter {
+	color:slateblue;
+}
+
+.remaining{
+	color: orangered;
+}
