--- a/style.css
+++ b/style.css
@@ -4,11 +4,11 @@ body {
 	justify-content: center;
 	height: 100vh;
 	align-items: center;
-	background-color: crimson;
+	background-color: rgb(164, 8, 40);
 }
 
 .container {
-	background-color: rgba(0, 213, 255, 0.745);
+	background-color: rgba(14, 124, 234, 0.745);
 	width: 400px;
 	padding: 20px;
 	margin: 5px;
